force-app/main/default/objects/Account_Product__c/Account_Product__c.object-meta.xml
<CustomObject>
    <label>Account Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>