force-app/main/default/objects/Account_Product__c/fields/General_Connents__c.field-meta.xml
<CustomField>
    <fullName>General_Connents__c</fullName>
    <label>General Connents</label>
    <type>TextArea</type>
</CustomField>