force-app/main/default/objects/Account_Product__c/fields/Purchase_Volume__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Volume__c</fullName>
    <label>Purchase Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>